<resources>
    <string name="app_name">Distance</string>
    <string name="trDateHeadString">DATE</string>
    <string name="trDistanceHeadString">DISTANCE</string>
    <string name="tvDistanceRange">Select distance range</string>
    <string name="tvDateRange">Select date and time</string>
    <string name="tvBrowseAll">Browse all...</string>
    <string name="tvActionRefresh">Refresh</string>
    <string name="tvLastDay">LAST 24 HOURS</string>
    <string name="tvLast3Days">LAST 3 DAYS</string>
    <string name="etDistanceFrom">FROM</string>
    <string name="etDistanceTo">TO</string>
    <string name="etDateFrom">DATE FROM</string>
    <string name="etTimeFrom">TIME FROM</string>
    <string name="etDateTo">DATE TO</string>
    <string name="etTimeTo">TIME TO</string>
    <string name="etPageNo">PAGE NO.</string>
    <string name="etRecordsPerPage">PER PAGE</string>
</resources>
