<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogDateLayMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialogDateLayFrom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etDateFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="@string/etDateFrom"
            android:inputType="date" />

        <EditText
            android:id="@+id/etTimeFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="@string/etTimeFrom"
            android:inputType="time" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialogDateLayTo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/etDateTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:hint="@string/etDateTo"
            android:inputType="date" />

        <EditText
            android:id="@+id/etTimeTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:focusable="false"
            android:hint="@string/etTimeTo"
            android:inputType="time" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialogDateLayQuickPick"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvShowLast3Days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="0dp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/frame_border"
            android:clickable="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/tvLast3Days"
            android:textColor="@color/fontColorMain"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvShowLastDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/frame_border"
            android:clickable="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/tvLastDay"
            android:textColor="@color/fontColorMain"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>